fixes (well sort of) bug 216800 "drag-n-drop to a GTK2 mozilla build often fails" r+sr=blizzard a=asa